Enable tls for swarm

--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -1,3 +1,4 @@
 FROM ehazlett/interlock
-CMD ["--swarm-url","tcp://10.0.0.4:9999","--plugin","haproxy","start"]
+COPY ./*.pem /
+CMD ["--swarm-url","tcp://172.31.57.87:2376","--swarm-tls-ca-cert","/ca.pem","--swarm-tls-cert","/cert.pem","--swarm-tls-key","/key.pem","--plugin","haproxy","start"]
 EXPOSE 80
